Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/repeatingAnnotations/RepeatingTargetNotAllowed.out
RepeatingTargetNotAllowed.java:20:5: compiler.err.invalid.repeatable.annotation.not.applicable: Foos, f
1 error
